--- a/js/package.json
+++ b/js/package.json
@@ -23,11 +23,8 @@
     "url": "https://github.com/owncloud/mail/issues"
   },
   "homepage": "https://github.com/owncloud/mail",
-  "devDependencies": {
-    "grunt-contrib-jshint": "^0.11.2",
-    "grunt-jscs": "^1.8.0",
-    "jscs-jsdoc": "^1.0.1",
-    "jshint": "^2.7.0",
-    "jsxhint": "^0.14.0"
+  "dependencies": {
+    "domready": "^1.0.8",
+    "requirejs": "^2.1.20"
   }
 }
