--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "domready": "~1.0.8",
     "handlebars": "~3.0.3",
     "jQuery-Storage-API": "julien-maurel/jQuery-Storage-API#~1.7.4",
+    "jasmine-core": "jasmine#~2.3.4",
     "jquery-visibility": "~1.0.11",
     "requirejs": "~2.1.20",
     "underscore": "~1.8.3"
