--- a/package.json
+++ b/package.json
@@ -25,12 +25,13 @@
   },
   "homepage": "https://github.com/owncloud/mail",
   "devDependencies": {
+    "bower": "^1.5.2",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-jshint": "^0.11.2",
     "grunt-jscs": "^1.8.0",
+    "jasmine-core": "^2.3.4",
     "jscs-jsdoc": "^1.0.1",
     "jshint": "^2.7.0",
-    "jsxhint": "^0.14.0",
-    "bower": "^1.5.2"
+    "jsxhint": "^0.14.0"
   }
 }
